# seed-origin

./: .collaboration-template-version  .gitignore  AGENTS.md  Action.h  ActionQueue.h  Buff.h  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Connection.cpp  DataTest.cpp  FileManager.cpp  FileManagerTest.cpp  LICENSE  Logger.h  Player.cpp  Player.h  README.md  SECURITY.md  a.out  seeds.asta.bak
.cursor/rules/: 01-quickstart.mdc  02-architecture-boundaries.mdc  03-collaboration-and-completion.mdc
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture.yml  bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
.grok/rules/: 01-quickstart.md  02-architecture-boundaries.md  03-collaboration-and-completion.md
doc/: seeds.md
docs/architecture/: README.md  agent-quickstart.md  ai-request-routing.md  dependency-policy.md  ether-rules.md  external-resource-adoption-contract.md  implementation-readiness.md  io-reasoning-contracts.md  project-structure.md  seed-implementation.md  testing-strategy.md  world-integration-spec.md
docs/at-tdd/: process.md
docs/collaboration/: adoption-guide.md  ai-failure-recovery.md  ai-human-scheme.md  ai-work-trace-log.md  branch-commit-pr-discipline.md  definition-of-done.md  evaluation-and-golden-examples.md  llm-cost-reduction.md  local-issue-planning.md  model-tool-capability-matrix.md  privacy-context-budget-policy.md  process-gap-register.md  project-start-guide.md  prompt-instruction-change-control.md  runner-cli-contract.md  session-start-and-resume.md  source-code-quality.md  template-benefits.md
docs/issues/: LISS-0017-cpp-layout-and-correctness.md  LISS-0018-world-integration.md  LISS-0019-world-safety-gate.md  LISS-0020-world-model.md  LISS-0021-ether-field.md  LISS-0022-world-events.md  LISS-0023-world-runtime.md  LISS-0024-world-boundary.md  LISS-0025-binary-file-safety.md  LISS-0026-field-state-queue.md  LISS-0027-status-position-buff.md  LISS-0028-action-domain-contract.md  LISS-0029-connection-transport.md  LISS-0030-test-build-foundation.md  LISS-0031-codeql-gate.md  LISS-0032-main-branch-migration.md  LISS-0033-legacy-cleanup.md  LISS-0034-player-ownership-slice.md  LISS-0035-binary-boundary-slice.md  LISS-0036-field-state-slice.md  LISS-0037-status-saturation-slice.md  (+103 more)
en.lproj/: FileManagerTest.cpp
scripts/: copy-ai-collaboration-files.sh  init-llm-context.sh  update-ai-collaboration-files.sh
seed/: FileManager.cpp  FileManagerTest.h  SeedBinary.cpp  SeedBinary.h  main.cpp  seed.1
seed.xcodeproj/: project.pbxproj
seed_base/: Manager.cpp  Manager.h  NodeItemCode.h
seed_base.xcodeproj/: project.pbxproj
seeds/: Buff.cpp  Field.cpp  Field.h  Manager.cpp  Manager.h  SeedBinary.cpp  SeedBinaryTest.cpp  main.cpp
seeds.xcodeproj/: project.pbxproj
src/: Action.cpp  ActionQueue.cpp  Buff.cpp  ChatCommandHandler.cpp  ClientEnvironmentState.cpp  ClientHazardEffectQueue.cpp  ClientSession.cpp  ClientWorldSnapshotApplier.cpp  ClientWorldUpdateReceiver.cpp  CombatCommandHandler.cpp  CommandRateLimiter.cpp  Connection.cpp  Data.cpp  EnvironmentEther.cpp  Field.cpp  FileManager.cpp  FrameAccumulator.cpp  IdentityAliasStore.cpp  LoginCommandHandler.cpp  LoginResponse.cpp  LoginResponseCodec.cpp  MovementCommandHandler.cpp  MovementIntentQueue.cpp  NetworkCommand.cpp  NetworkFrameCodec.cpp  Npc.cpp  NpcAi.cpp  OutboundFrameQueue.cpp  Player.cpp  Position.cpp  SeedBinary.cpp  ServerCommandDispatcher.cpp  ServerRuntime.cpp  ServerTick.cpp  SessionLifecycle.cpp  SessionRegistry.cpp  Status.cpp  WorldFrameApplier.cpp  WorldFrameUpdateBuilder.cpp  WorldInputQueue.cpp  (+8 more)
tests/: ActionInputTest.cpp  ActionQueueTest.cpp  ChatCommandHandlerTest.cpp  ClientHazardEffectQueueTest.cpp  ClientSessionTest.cpp  ClientWorldSnapshotApplierTest.cpp  ClientWorldUpdateReceiverTest.cpp  CombatCommandHandlerTest.cpp  CombatResolutionEventTest.cpp  CombatResourceTest.cpp  CommandRateLimiterTest.cpp  ConnectionTest.cpp  DataTest.cpp  EnvironmentEtherTest.cpp  FieldStateTest.cpp  FrameAccumulatorTest.cpp  IdentityAliasStoreTest.cpp  LoginCommandHandlerTest.cpp  LoginResponseCodecTest.cpp  MovementCommandHandlerTest.cpp  MovementIntentQueueTest.cpp  NetworkCommandTest.cpp  NetworkFrameCodecTest.cpp  NpcAiTest.cpp  NpcCombatTargetTest.cpp  OutboundFrameQueueTest.cpp  PlayerOwnershipTest.cpp  SeedBinaryTest.cpp  ServerCommandDispatcherTest.cpp  ServerRuntimeTest.cpp  ServerTickTest.cpp  SessionLifecycleTest.cpp  SessionRegistryTest.cpp  StatusSaturationTest.cpp  TestMain.cpp  WorldFrameApplierTest.cpp  WorldFrameUpdateBuilderTest.cpp  WorldInputQueueTest.cpp  WorldInputTickTest.cpp  WorldSnapshotBuilderTest.cpp  (+4 more)
(+127 files in other folders)
